Testing & Bug fixes for Property Update